force-app/main/default/objects/Sanction_Condition__c/Sanction_Condition__c.object-meta.xml
<CustomObject>
    <label>Sanction Condition</label>
    <nameField>
        <label>Sanction Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sanction Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>