force-app/main/default/objects/Sanction_Condition__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanction_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>