force-app/main/default/objects/Sanction_Condition__c/fields/MsSanctionCondition__c.field-meta.xml
<CustomField>
    <fullName>MsSanctionCondition__c</fullName>
    <label>MsSanctionCondition</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>