force-app/main/default/objects/Sanction_Condition__c/fields/Other_Condition__c.field-meta.xml
<CustomField>
    <fullName>Other_Condition__c</fullName>
    <label>Other Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>