force-app/main/default/objects/Sanction_Condition__c/fields/Print_In_Sanction_Letter__c.field-meta.xml
<CustomField>
    <fullName>Print_In_Sanction_Letter__c</fullName>
    <label>Print in Sanction Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>